Upgrade to Jasmine 2.0.0

--- a/vs_projects/Angular-WebApi-Jasmine/Angular-WebApi-Jasmine/SpecRunner.html
+++ b/vs_projects/Angular-WebApi-Jasmine/Angular-WebApi-Jasmine/SpecRunner.html
@@ -2,17 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Controllers Spec Runner</title>
-    <link href="css/jasmine.css" rel="stylesheet" />    
+    <link href="Content/jasmine/jasmine.css" rel="stylesheet" />    
 </head>
     <body>
-        <script src="scripts/jasmine.js"></script>
-        <script src="scripts/jasmine-html.js"></script>
+        <script src="scripts/jasmine/jasmine.js"></script>
+        <script src="scripts/jasmine/jasmine-html.js"></script>
+        <script src="scripts/jasmine/boot.js"></script>
         <script src="scripts/angular.js"></script>
         <script src="scripts/angular-mocks.js"></script>
         <script src="app.js"></script>
         <script src="controllers.js"></script>
         <script src="ControllerSpec.js"></script>
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
             (function() {
                 var jasmineEnv = jasmine.getEnv();
                 jasmineEnv.updateInterval = 1000;
@@ -39,6 +40,6 @@
                 }
 
             })();
-        </script>
+        </script>-->
     </body>
 </html>
