--- a/react/react-gulp/src/index.html
+++ b/react/react-gulp/src/index.html
@@ -3,9 +3,12 @@
 <head></head>
 <body>
     <div id="app"></div>
+    <div>Hello</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
+    <!-- build:js -->
     <script src="src/Child.js"></script>
     <script src="src/Parent.js"></script>
     <script src="src/App.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
