webpack with react

--- a/try-webpack/index.html
+++ b/try-webpack/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1 id="h1Txt">N/A</h1>
+    <div id="reactDiv"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
