--- a/try-plotly/index.html
+++ b/try-plotly/index.html
@@ -1,7 +1,9 @@
 <html>
-  <head>
-    <title>plotly</title>
-  </head>
+
+<head>
+  <title>plotly</title>
+</head>
+
 <body>
   <div id="graph1">
   </div>
@@ -44,35 +46,39 @@
     var graph2 = document.getElementById('graph2');
     graph2.on('plotly_relayout', function(e){
       console.log('graph2..', graph2.data[0].x, e);
-      console.log(e['xaxis.range[0]']);
-      var minX = e['xaxis.range[0]'];
-      var maxX = e['xaxis.range[1]'];
-      var minY = e['yaxis.range[0]'];
-      var maxY = e['yaxis.range[1]'];
 
-      var selected = graph2.data[0].x.reduce(function(acc, x, i){
-        console.log(acc, x, i);
-        if(x > minX
-          && x < maxX
-          && graph2.data[0].y[i] > minY
-          && graph2.data[0].y[i] < maxY){
-          acc.push(i);
-        }
-        return acc;
-      }, []);
-      console.log(selected);
+      if(e['xaxis.autorange'] && e['yaxis.autorange']){
+        graph1.data = data;
+      } else {
+        var minX = e['xaxis.range[0]'];
+        var maxX = e['xaxis.range[1]'];
+        var minY = e['yaxis.range[0]'];
+        var maxY = e['yaxis.range[1]'];
 
-      var newData = selected.map(function(x){
-        return data[x];
-      });
+        var selected = graph2.data[0].x.reduce(function(acc, x, i){
+          console.log(acc, x, i);
+          if(x > minX
+            && x < maxX
+            && graph2.data[0].y[i] > minY
+            && graph2.data[0].y[i] < maxY){
+            acc.push(i);
+          }
+          return acc;
+        }, []);
+        console.log(selected);
 
-      console.log(newData);
-      // redraw
-      graph1.data = newData;
+        graph1.data = selected.map(function(x){
+          return data[x];
+        });
+      }
+
+      // redraw;
+      console.log(graph1.data);
       Plotly.redraw(graph1);
 
     });
 
   </script>
 </body>
+
 </html>
