--- a/try-plotly/axis.html
+++ b/try-plotly/axis.html
@@ -9,51 +9,57 @@
   </div>
 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
   <script>
     var graph1 = document.getElementById('graph1');
 
     var d3 = Plotly.d3;
 
-    // http://stackoverflow.com/questions/17037023/how-to-get-localizable-or-customizable-si-codes-with-d3-format
-    // Change D3's SI prefix to more business friendly units
-    //      K = thousands
-    //      M = millions
-    //      B = billions
-    //      T = trillion
-    //      P = quadrillion
-    //      E = quintillion
-    // small decimals are handled with e-n formatting.
-    var d3_formatPrefixes = ["e-24","e-21","e-18","e-15","e-12","e-9","e-6","e-3","","M","MM","B","T","P","E","Z","Y"].map(d3_formatPrefix);
+    // console.log('original: ', d3.format(".3s")(1234567890)); // 1.23B)
+    // var originalFormatPrefix = d3.formatPrefix;
 
-    // Override d3's formatPrefix function
-    d3.formatPrefix = function(value, precision) {
-        var i = 0;
-        if (value) {
-            if (value < 0) {
-                value *= -1;
-            }
-            if (precision) {
-                value = d3.round(value, d3_format_precision(value, precision));
-            }
-            i = 1 + Math.floor(1e-12 + Math.log(value) / Math.LN10);
-            i = Math.max(-24, Math.min(24, Math.floor((i - 1) / 3) * 3));
-        }
-        return d3_formatPrefixes[8 + i / 3];
-    };
+    // // http://stackoverflow.com/questions/17037023/how-to-get-localizable-or-customizable-si-codes-with-d3-format
+    // // Change D3's SI prefix to more business friendly units
+    // //      K = thousands
+    // //      M = millions
+    // //      B = billions
+    // //      T = trillion
+    // //      P = quadrillion
+    // //      E = quintillion
+    // // small decimals are handled with e-n formatting.
+    // var d3_formatPrefixes = ["e-24","e-21","e-18","e-15","e-12","e-9","e-6","e-3","","M","MM","B","T","P","E","Z","Y"].map(d3_formatPrefix);
 
-    function d3_formatPrefix(d, i) {
-        var k = Math.pow(10, Math.abs(8 - i) * 3);
-        return {
-            scale: i > 8 ? function(d) { return d / k; } : function(d) { return d * k; },
-            symbol: d
-        };
-    }
+    // // Override d3's formatPrefix function
+    // d3.formatPrefix = function(value, precision) {
+    //     var i = 0;
+    //     if (value) {
+    //         if (value < 0) {
+    //             value *= -1;
+    //         }
+    //         if (precision) {
+    //             value = d3.round(value, d3_format_precision(value, precision));
+    //         }
+    //         i = 1 + Math.floor(1e-12 + Math.log(value) / Math.LN10);
+    //         i = Math.max(-24, Math.min(24, Math.floor((i - 1) / 3) * 3));
+    //     }
+    //     return d3_formatPrefixes[8 + i / 3];
+    // };
 
-    function d3_format_precision(x, p) {
-        return p - (x ? Math.ceil(Math.log(x) / Math.LN10) : 1);
-    }
+    // function d3_formatPrefix(d, i) {
+    //     var k = Math.pow(10, Math.abs(8 - i) * 3);
+    //     return {
+    //         scale: i > 8 ? function(d) { return d / k; } : function(d) { return d * k; },
+    //         symbol: d
+    //     };
+    // }
 
-    console.log(d3.format(".3s")(1234567890)); // 1.23B)
+    // function d3_format_precision(x, p) {
+    //     return p - (x ? Math.ceil(Math.log(x) / Math.LN10) : 1);
+    // }
+
+
+
+    //console.log('modified: ', d3.format(".3s")(1234567890)); // 1.23B)
 
     var N = 400;
     var data = d3.range(4).map(function(_, i){
@@ -84,6 +90,56 @@
     };
 
     Plotly.plot(graph1, data, layout);
+
+    Function.prototype.clone = function() {
+        var that = this;
+        var temp = function temporary() { return that.apply(this, arguments); };
+        for(var key in this) {
+            if (this.hasOwnProperty(key)) {
+                temp[key] = this[key];
+            }
+        }
+        return temp;
+    };
+
+
+
+    // d3.formatPrefix = originalFormatPrefix;
+    // console.log('original: ', d3.format(".3s")(1234567890)); // 1.23B)
+
+    var originalFormatPrefix = d3.formatPrefix.clone();
+
+    d3.formatPrefix = function(value, precision){
+      var ret = originalFormatPrefix(value, precision);
+      console.log(oilSi, ret);
+
+      if(oilSi){
+        switch(ret.symbol){
+          case 'k':
+          case 'K':
+            ret.symbol = 'M';
+            break;
+          case 'm':
+          case 'M':
+            ret.symbol = 'MM';
+            break;
+        }
+      }
+      return ret;
+    };
+
+    var oilSi = false;
+
+    console.log('oilSi: ', oilSi, d3.format("s")(1000), d3.format("s")(1000000));
+
+    oilSi = true;
+
+    console.log('oilSi: ', oilSi, d3.format("s")(1000), d3.format("s")(1000000));
+
+
+    oilSi = false;
+
+    console.log('oilSi: ', oilSi, d3.format("s")(1000), d3.format("s")(1000000));
 
 
   </script>
