--- a/try-electron/electron-react/public/index.html
+++ b/try-electron/electron-react/public/index.html
@@ -5,9 +5,13 @@
     <title>Hello World!</title>
   </head>
   <body>
+    <div id='content'>
+
+    </div>
     <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+  <script src='bundle.js'></script>
   </body>
 </html>
